--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,17 @@ android {
         jvmTarget = '1.8'
     }
     dependencies {
+        //noinspection GradleCompatible
+        implementation 'com.android.support:support-v4:28.0.0'
         implementation 'com.squareup.retrofit2:retrofit:2.9.0'
         implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
         implementation 'com.squareup.okhttp3:okhttp:4.9.2'
     }
+}
+
+dependencies {
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.core:core:1.10.0'
+    implementation 'com.google.android.material:material:1.4.0'
 }
 
