--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ plugins {
 
 android {
     namespace 'com.example.loginpage'
-    compileSdk 33
+    compileSdkPreview "UpsideDownCake"
 
     defaultConfig {
         applicationId "com.example.loginpage"
-        minSdk 19
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -39,7 +39,8 @@ android {
 
 dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.core:core:1.10.0'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.core:core:1.12.0-alpha03'
+    implementation 'androidx.core:core-ktx:1.12.0-alpha03'
+    implementation 'com.google.android.material:material:1.5.0-alpha03'
 }
 
